--- a/notebooks/figures/eval_ai_results.ipynb
+++ b/notebooks/figures/eval_ai_results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,26 @@
     "    \n",
     "with open(data_path + 'grey_bar_dict.pkl', 'rb') as f:\n",
     "    ablation_results_val = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12.898, 12.018, 12.316]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_results['neurips_transformer_time_masked_seed_'][6:9]"
    ]
   },
   {
