--- a/notebooks/figures/figure1.ipynb
+++ b/notebooks/figures/figure1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,28 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "neurips_gru_baseline_seed_seed_ [[0.8133207841352983, 0.21761380050348728], [0.8044434980912643, 0.2184391894680368], [0.8186466563831676, 0.2202963146382733], [0.8164406516335228, 0.21662333374602782], [0.8118721008300781, 0.21588048367793322], [0.8292586586692117, 0.2174074532623499], [0.8090567848899147, 0.21637571705666295], [0.8235112970525568, 0.21790268664107962], [0.8118376991965554, 0.21678841153893771]]\n",
-      "neurips_gru_datalog_lr_scheduler_seed_ [[0.788998066295277, 0.21876934505385662], [0.7920632795854048, 0.2188106145020841], [0.7899676236239347, 0.22075027856877555], [0.779993369362571, 0.2168296809871652], [0.7878250122070313, 0.219924889604226], [0.7899722012606534, 0.2186868061574017], [0.7891702131791548, 0.22070900912054806], [0.7907774491743608, 0.21893442284676654], [0.7877793745561079, 0.21930584788081384], [0.7894825328480114, 0.21876934505385662]]\n",
-      "neurips_gru_data_log_time_masked_lr_schedule_seed_ [[0.7416962363503196, 0.16103338698361602], [0.7500174782492898, 0.1602079980190665], [0.7509889082475142, 0.16082703974247864], [0.7411636352539063, 0.16004292022615657], [0.744885878129439, 0.16148735091411828], [0.7438495289195668, 0.160166728570839], [0.7489684365012429, 0.15991911188147415], [0.7560781305486506, 0.15880483677933227], [0.7269735162908381, 0.15938260905451695]]\n",
-      "neurips_transformer_time_masked_seed_ [[0.8373663, 0.13788122652800133], [0.8862335, 0.1451446494160373], [0.8195295, 0.13726218480458915], [0.87885326, 0.1428335603152986], [0.81025326, 0.1373447237010441], [0.81490743, 0.13940819611241798], [0.88050574, 0.1432049853493459], [0.84306425, 0.13895423218191572], [0.8299097, 0.13639552639181216], [0.8764624, 0.14419545210680534]]\n"
+      "[[0.8373663, 0.13788122652800133], [0.8862335, 0.1451446494160373], [0.8195295, 0.13726218480458915], [0.87885326, 0.1428335603152986], [0.81025326, 0.1373447237010441], [0.81490743, 0.13940819611241798], [0.88050574, 0.1432049853493459], [0.84306425, 0.13895423218191572], [0.8299097, 0.13639552639181216], [0.8764624, 0.14419545210680534]]\n"
      ]
     }
    ],
    "source": [
-    "for key, val in main_results_val.items():\n",
-    "    print(key,val)"
+    "print(main_results_val['neurips_transformer_time_masked_seed_'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,23 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1249814/254228793.py:17: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/tmp/ipykernel_1346606/254228793.py:17: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  means_main = data_main.groupby(\"Model\")[\"Performance\"].mean().reset_index()\n",
-      "/tmp/ipykernel_1249814/254228793.py:28: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/tmp/ipykernel_1346606/254228793.py:28: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  means_ablate = data_ablate.groupby(\"Model\")[\"Performance\"].mean().reset_index()\n",
-      "/tmp/ipykernel_1249814/254228793.py:58: FutureWarning: \n",
+      "/tmp/ipykernel_1346606/254228793.py:58: FutureWarning: \n",
       "\n",
       "Setting a gradient palette using color= is deprecated and will be removed in v0.14.0. Set `palette='dark:black'` for the same effect.\n",
       "\n",
       "  sns.stripplot(\n",
-      "/tmp/ipykernel_1249814/254228793.py:103: FutureWarning: \n",
+      "/tmp/ipykernel_1346606/254228793.py:103: FutureWarning: \n",
       "\n",
       "Setting a gradient palette using color= is deprecated and will be removed in v0.14.0. Set `palette='dark:black'` for the same effect.\n",
       "\n",
@@ -308,7 +304,7 @@
     "axes[1].set_yticks([])\n",
     "axes[1].grid(axis=\"x\", linestyle=\"--\", alpha=0.3)\n",
     "axes[1].axvline(x=np.mean(model_perf_dict_main['Transf. + LR↓ + Log(x) + Mask']), \n",
-    "                color=\"purple\", linestyle='--', linewidth=2)\n",
+    "                color=\"black\", linestyle='--', linewidth=2)\n",
     "sns.despine(left=True, ax=axes[1])\n",
     "plt.savefig('figure_pdf/figure1/3_gram.pdf', bbox_inches='tight')\n",
     "plt.tight_layout()\n",
