--- a/notebooks/figures/figure2.ipynb
+++ b/notebooks/figures/figure2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,14 @@
     "                'neurips_transformer_time_masked_ventral_6v_only_seed_': 'Transformer'}\n",
     "\n",
     "ventral_6v_perf = rename_keys_by_map(ventral_6v_perf, replace_keys)\n",
-    "print(ventral_6v_perf)"
+    "print(ventral_6v_perf)\n",
+    "\n",
+    "\n",
+    "held_out_days_perf = {'GRU': [46.109, 46.366, 46.812, 46.082], \n",
+    "                     'Transformer': [41.453, 42.251, 40.669, 41.332]}\n",
+    "\n",
+    "restricted_days_perf = {'GRU': [], \n",
+    "                     'Transformer': []}"
    ]
   },
   {
@@ -205,18 +212,12 @@
     "plot_model_perf_with_benchmark(fig, axs, 0, ventral_6v_perf, \n",
     "                               transf_orig_perf=transformer_perf, gru_orig_perf=baseline_perf, title='Ventral 6v Only')\n",
     "\n",
-    "restricted_days = {\n",
-    "    'Transformer': [0.17929, 0.19023, 0.18, 0.18392],\n",
-    "    'GRU': [0.28016, 0.27927, 0.27981, 0.28123]\n",
-    "}\n",
-    "plot_model_perf_with_benchmark(fig, axs, 1, restricted_days, \n",
+    "\n",
+    "plot_model_perf_with_benchmark(fig, axs, 1, restricted_days_perf, \n",
     "                               transf_orig_perf=transformer_perf, gru_orig_perf=baseline_perf, title='5 Days', show_legend=False)\n",
     "\n",
-    "restricted_days = {\n",
-    "    'Transformer': [0.30, 0.31, 0.29, 0.295],\n",
-    "    'GRU': [0.46, 0.465, 0.47, 0.468]\n",
-    "}\n",
-    "plot_model_perf_with_benchmark(fig, axs, 2, restricted_days, transf_orig_perf=transformer_perf,\n",
+    "\n",
+    "plot_model_perf_with_benchmark(fig, axs, 2, held_out_days_perf, transf_orig_perf=transformer_perf,\n",
     "                               gru_orig_perf=baseline_perf, title='Progressive Held-Out Days', show_legend=False)"
    ]
   },
