--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "87c7d480",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "adb4351e",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        " 't12.2022.08.25']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "41cb63b5",
    "metadata": {},
    "outputs": [
@@ -547,11 +547,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Placing t12.2022.05.24 in test/comp\n",
-      "Placing t12.2022.05.26 in test/comp\n",
-      "Placing t12.2022.06.02 in test/comp\n",
-      "Placing t12.2022.06.07 in test/comp\n",
-      "Placing t12.2022.06.14 in test/comp\n"
+      "Placing t12.2022.07.21 in test/comp\n",
+      "Placing t12.2022.07.27 in test/comp\n",
+      "Placing t12.2022.07.29 in test/comp\n",
+      "Placing t12.2022.08.02 in test/comp\n",
+      "Placing t12.2022.08.11 in test/comp\n",
+      "Placing t12.2022.08.13 in test/comp\n"
      ]
     }
    ],
@@ -560,11 +561,11 @@
     "testDatasets = []\n",
     "competitionDatasets = []\n",
     "\n",
-    "held_out_run_set = 1\n",
+    "held_out_run_set = 0\n",
     "\n",
     "if held_out_run_set == 0:\n",
     "\n",
-    "    evaluation_days = ['07.21', '07.27', '07.29', '08.02', '08.11', '08.13'] # added an extra comp day\n",
+    "    evaluation_days = ['07.21', '07.27', '07.29', '08.02', '08.11', '08.13'] \n",
     "    loop_until = -3\n",
     "    \n",
     "elif held_out_run_set == 1:\n",
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "2da5be87",
    "metadata": {},
    "outputs": [
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "81af6595",
    "metadata": {},
    "outputs": [
@@ -637,7 +638,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "/data/willett_data/ptDecoder_ctc_both\n"
      ]
     }
    ],
@@ -649,6 +651,7 @@
     "allDatasets['competition'] = competitionDatasets\n",
     "\n",
     "print(held_out_run_set)\n",
+    "print(dataSave)\n",
     "if held_out_run_set > 0:\n",
     "    dataSave_held_out_days = f\"{dataSave}_held_out_days_{held_out_run_set}\"\n",
     "else:\n",
