--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +114,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0511 16:01:17.422783 1366004 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0511 16:03:50.944517 1366004 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0512 00:38:48.596866 1420767 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0512 00:41:37.998492 1420767 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
       "Loading TRANSFORMER\n",
       "RESTRICTED DAYS:  []\n"
      ]
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1366004/3850275919.py:243: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1420767/614899006.py:254: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -168,13 +168,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  0.24801244382993431\n",
-      "CER DAY:  0.27493960812382573\n",
-      "CER DAY:  0.2683194727757728\n",
-      "CER DAY:  0.2608283819857057\n",
-      "CER DAY:  0.31364925922034254\n",
-      "CER DAY:  0.3183244939928564\n",
-      "Model performance:  0.27916827755458806\n"
+      "CER DAY:  0.18673172562634888\n",
+      "CER DAY:  0.19941775836972345\n",
+      "CER DAY:  0.2667766776677668\n",
+      "CER DAY:  0.3092548553309552\n",
+      "CER DAY:  0.3521456436931079\n",
+      "Model performance:  0.2651202423783374\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.019345652935456256 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (0.24801133994830318, 0.2402580972078934, 0.2559537230430644) (0.3501616513305148, 0.3391700745034115, 0.3615269890155994)\n"
      ]
     }
    ],
@@ -188,9 +190,11 @@
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "    \n",
-    "models_to_run = ['neurips_transformer_time_masked_held_out_days']\n",
+    "models_to_run = ['neurips_transformer_time_masked_held_out_days_2',\n",
+    "                 'neurips_transformer_time_masked_held_out_days_1', \n",
+    "                 'neurips_transformer_time_masked_held_out_days']\n",
     "\n",
-    "shared_output_file = ''\n",
+    "shared_output_file = 'transformer_held_out_days_memo'\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    print(\"Writing to shared output file\")\n",
@@ -198,15 +202,17 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0]\n",
-    "partition = \"test\" # \"test\"\n",
-    "run_lm = False\n",
+    "seeds_list = [0,1,2,3]\n",
+    "partition = \"competition\" # \"test\"\n",
+    "run_lm = True\n",
     "\n",
+    "comp_on_reduced = True\n",
     "fill_max_day = False\n",
-    "memo = False\n",
-    "memo_epochs = 2\n",
+    "memo = True\n",
+    "memo_epochs = 1\n",
     "memo_augs = 16\n",
-    "memo_lr = 7e-4\n",
+    "memo_lr = [6e-5, 6e-5, 6e-5]\n",
+    "skip_days = [[], [], []]\n",
     "\n",
     "day_edit_distance = 0\n",
     "day_seq_length = 0\n",
@@ -220,7 +226,7 @@
     "    \n",
     "for seed in seeds_list:\n",
     "    \n",
-    "    for model_name_str in models_to_run:\n",
+    "    for mn, model_name_str in enumerate(models_to_run):\n",
     "        \n",
     "        modelPath = f\"{model_storage_path}{model_name_str}_seed_{seed}\"\n",
     "        \n",
@@ -322,9 +328,16 @@
     "        model = model.to(device)\n",
     "        \n",
     "        if memo: \n",
-    "            optimizer = torch.optim.AdamW(model.parameters(), lr=memo_lr, weight_decay=0, \n",
+    "            optimizer = torch.optim.AdamW(model.parameters(), lr=memo_lr[mn], weight_decay=0, \n",
     "                                    betas=(args['beta1'], args['beta2']))\n",
     "            original_state_dict = copy.deepcopy(model.state_dict())\n",
+    "            \n",
+    "            for p in model.parameters():\n",
+    "                p.requires_grad = False\n",
+    "\n",
+    "            # Unfreeze patch‑embedding linear projection (assumed third module)\n",
+    "            for p in model.to_patch_embedding[2].parameters():\n",
+    "                p.requires_grad = True\n",
     "        \n",
     "        model.eval()\n",
     "\n",
@@ -340,7 +353,7 @@
     "\n",
     "        if partition == \"competition\":\n",
     "            \n",
-    "            if fill_max_day:\n",
+    "            if comp_on_reduced:\n",
     "                testDayIdxs = np.arange(5)\n",
     "            else:\n",
     "                testDayIdxs = [4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 18, 19, 20]\n",
@@ -352,8 +365,12 @@
     "        ground_truth_sentences = []\n",
     "        \n",
     "        print(\"RESTRICTED DAYS: \", args['restricted_days'])\n",
-    "            \n",
+    "        \n",
     "        for i, testDayIdx in enumerate(testDayIdxs):\n",
+    "            \n",
+    "            if len(skip_days[mn]) > 0:\n",
+    "                if testDayIdx in skip_days[mn]:\n",
+    "                    continue\n",
     "            \n",
     "            if len(args['restricted_days']) > 0:\n",
     "                if testDayIdx not in args['restricted_days']:\n",
@@ -378,9 +395,7 @@
     "                    dayIdx.fill_(args['maxDay'])\n",
     "                     \n",
     "                if memo: \n",
-    "                    \n",
-    "                    model.load_state_dict(original_state_dict)\n",
-    "                    \n",
+    "                                        \n",
     "                    model.train()\n",
     "                    \n",
     "                    for _ in range(memo_epochs):\n",
@@ -519,12 +534,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CER DAY:  0.29936305732484075\n",
-    "CER DAY:  0.34849187935034803\n",
-    "CER DAY:  0.4969650337693426\n",
-    "CER DAY:  0.5333518364326024\n",
-    "CER DAY:  0.5832250881425125\n",
-    "Model performance:  0.4542547913489278"
+    "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+    "CER DAY:  0.18701323074035844\n",
+    "CER DAY:  0.20014556040756915\n",
+    "CER DAY:  0.2676017601760176\n",
+    "CER DAY:  0.30618311533888226\n",
+    "CER DAY:  0.341395752058951\n",
+    "Model performance:  0.26254497254307896\n",
+    "Running n-gram LM\n",
+    "N-gram decoding took 0.01895871174578764 seconds per sample\n",
+    "CER and WER after 3-gram LM:  (0.24947886266989078, 0.24185914701801067, 0.25716652364444587) (0.3511564287490674, 0.33995621145518856, 0.36229499823919814)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with memo\n",
+    "# without\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
+    "Output exceeds the size limit. Open the full output data in a text editorCER DAY:  0.3284115035707392\n",
+    "CER DAY:  0.380046403712297\n",
+    "CER DAY:  0.5224416517055656\n",
+    "CER DAY:  0.5491719863077066\n",
+    "CER DAY:  0.5892558916311004\n",
+    "Model performance:  0.47584572132081365\n",
+    "Running n-gram LM\n",
+    "N-gram decoding took 0.04170605278015137 seconds per sample\n",
+    "CER and WER after 3-gram LM:  (0.4804508971108348, 0.4715959430873275, 0.48947669469917093) (0.6677740863787376, 0.6558902882064046, 0.6799936068139665)\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+    "Loading TRANSFORMER\n",
+    "RESTRICTED DAYS:  []\n",
+    "CER DAY:  0.1893591066904382\n",
+    "CER DAY:  0.2011852776044916\n",
+    "CER DAY:  0.27035203520352036\n",
+    "CER DAY:  0.33125247720967105\n",
+    "CER DAY:  0.38925010836584306\n",
+    "Model performance:  0.27901912516568833\n",
+    "Running n-gram LM\n",
+    "N-gram decoding took 0.02109781369871023 seconds per sample\n",
+    "CER and WER after 3-gram LM:  (0.25845076294505126, 0.25050590982146115, 0.2666196134722149) (0.36906242228301417, 0.35733628898284037, 0.3811317908198835)\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+    "CER DAY:  0.1958174904942966\n",
+    "CER DAY:  0.21266887357967254\n",
+    "CER DAY:  0.2108843537414966\n",
+    "CER DAY:  0.2558579384259746\n",
+    "CER DAY:  0.25327416387054874\n",
+    "Model performance:  0.22340826085319476\n",
+    "Running n-gram LM\n",
+    "N-gram decoding took 0.019061621614530976 seconds per sample\n",
+    "CER and WER after 3-gram LM:  (0.19087837837837837, 0.1840513671786001, 0.19784976888843056) (0.28044250645994834, 0.2702872083074558, 0.2907064326560632)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without memo\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
+    "CER DAY:  0.3284115035707392\n",
+    "CER DAY:  0.380046403712297\n",
+    "CER DAY:  0.5224416517055656\n",
+    "CER DAY:  0.5491719863077066\n",
+    "CER DAY:  0.5892558916311004\n",
+    "Model performance:  0.47584572132081365\n",
+    "neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+    "CER DAY:  0.1893591066904382\n",
+    "CER DAY:  0.2011852776044916\n",
+    "CER DAY:  0.27035203520352036\n",
+    "CER DAY:  0.33125247720967105\n",
+    "CER DAY:  0.38925010836584306\n",
+    "Model performance:  0.27901912516568833\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+    "Loading TRANSFORMER\n",
+    "RESTRICTED DAYS:  []\n",
+    "CER DAY:  0.1958174904942966\n",
+    "CER DAY:  0.21266887357967254\n",
+    "CER DAY:  0.2041424760709242\n",
+    "CER DAY:  0.2108843537414966\n",
+    "CER DAY:  0.2558579384259746\n",
+    "CER DAY:  0.25327416387054874\n",
+    "Model performance:  0.22134440503605587\n",
+    "\n",
+    "# with memo (6e-5)\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
+    "CER DAY:  0.31596216946535416\n",
+    "CER DAY:  0.34960556844547563\n",
+    "CER DAY:  0.47755834829443444\n",
+    "CER DAY:  0.5047645480618004\n",
+    "CER DAY:  0.5534421970681017\n",
+    "Model performance:  0.4418882416714136\n",
+    "\n",
+    "\n",
+    "# with memo (1e-4)\n",
+    "neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+    "CER DAY:  0.18710706577836164\n",
+    "CER DAY:  0.1988978997712622\n",
+    "CER DAY:  0.2666850018335167\n",
+    "CER DAY:  0.3053904082441538\n",
+    "CER DAY:  0.34442999566536625\n",
+    "Model performance:  0.26265858738875214\n",
+    "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+    "Loading TRANSFORMER\n",
+    "RESTRICTED DAYS:  []\n",
+    "CER DAY:  0.19218804009678533\n",
+    "CER DAY:  0.20622707345441532\n",
+    "CER DAY:  0.19708143731366703\n",
+    "CER DAY:  0.2010677688797038\n",
+    "CER DAY:  0.24188294630660923\n",
+    "CER DAY:  0.2463470072518671\n",
+    "Model performance:  0.21344405036055875\n",
+    "\n",
+    "# 1.5e-4 No help\n",
+    "\n",
+    "# 9e-5 No help"
    ]
   }
  ],
