--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import time\n",
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,26 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded LM\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0512 00:38:48.596866 1420767 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0512 00:41:37.998492 1420767 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if load_lm: \n",
     "        \n",
@@ -144,14 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+      "Writing to shared output file\n",
+      "transformer_held_out_days_memo_seed_0\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
       "Loading TRANSFORMER\n",
       "RESTRICTED DAYS:  []\n"
      ]
@@ -160,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1420767/614899006.py:254: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1420767/3927999430.py:256: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -168,20 +144,163 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  0.18673172562634888\n",
-      "CER DAY:  0.19941775836972345\n",
-      "CER DAY:  0.2667766776677668\n",
-      "CER DAY:  0.3092548553309552\n",
-      "CER DAY:  0.3521456436931079\n",
-      "Model performance:  0.2651202423783374\n",
+      "CER DAY:  2.5265625\n",
+      "CER DAY:  2.7\n",
+      "CER DAY:  2.4390625\n",
+      "CER DAY:  2.3625\n",
+      "CER DAY:  2.1125\n",
+      "Model performance:  2.428125\n",
       "Running n-gram LM\n",
-      "N-gram decoding took 0.019345652935456256 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (0.24801133994830318, 0.2402580972078934, 0.2559537230430644) (0.3501616513305148, 0.3391700745034115, 0.3615269890155994)\n"
+      "N-gram decoding took 0.03492524087429047 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (2.3834375, 2.2868671875000004, 2.479375) (2.64, 2.5425, 2.73625)\n",
+      "transformer_held_out_days_memo_seed_0\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  3.24375\n",
+      "CER DAY:  2.828125\n",
+      "CER DAY:  2.5765625\n",
+      "CER DAY:  2.696875\n",
+      "CER DAY:  2.9375\n",
+      "Model performance:  2.8565625\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.019733198881149293 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.0825, 2.9684375, 3.1971875) (3.12, 3.0162187499999997, 3.22625)\n",
+      "transformer_held_out_days_memo_seed_0\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.903125\n",
+      "CER DAY:  2.8546875\n",
+      "CER DAY:  3.021875\n",
+      "CER DAY:  3.2265625\n",
+      "CER DAY:  2.8546875\n",
+      "Model performance:  2.9721875\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.02052836775779724 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.2084375, 3.1065625, 3.3125) (3.26375, 3.165, 3.36503125)\n",
+      "transformer_held_out_days_memo_seed_1\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_1\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.5421875\n",
+      "CER DAY:  2.6921875\n",
+      "CER DAY:  2.5\n",
+      "CER DAY:  2.4453125\n",
+      "CER DAY:  2.1609375\n",
+      "Model performance:  2.468125\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.031775383353233336 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (2.4084375, 2.3071875, 2.509375) (2.65375, 2.55375, 2.75375)\n",
+      "transformer_held_out_days_memo_seed_1\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_1\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  3.28125\n",
+      "CER DAY:  2.83125\n",
+      "CER DAY:  2.55\n",
+      "CER DAY:  2.6875\n",
+      "CER DAY:  2.965625\n",
+      "Model performance:  2.863125\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.020575798749923706 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.1115625, 2.9953046875, 3.226875) (3.13625, 3.03, 3.2425)\n",
+      "transformer_held_out_days_memo_seed_1\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_1\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.8828125\n",
+      "CER DAY:  2.8734375\n",
+      "CER DAY:  3.0640625\n",
+      "CER DAY:  3.221875\n",
+      "CER DAY:  2.8375\n",
+      "Model performance:  2.9759375\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.020233400464057923 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.229375, 3.1303046875000002, 3.3325) (3.2675, 3.17, 3.36625)\n",
+      "transformer_held_out_days_memo_seed_2\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_2\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.521875\n",
+      "CER DAY:  2.6625\n",
+      "CER DAY:  2.4265625\n",
+      "CER DAY:  2.3734375\n",
+      "CER DAY:  2.0734375\n",
+      "Model performance:  2.4115625\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.03231586158275604 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (2.36125, 2.2646875, 2.4590625) (2.6225, 2.5225, 2.72375)\n",
+      "transformer_held_out_days_memo_seed_2\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_2\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  3.3015625\n",
+      "CER DAY:  2.8625\n",
+      "CER DAY:  2.603125\n",
+      "CER DAY:  2.6921875\n",
+      "CER DAY:  2.975\n",
+      "Model performance:  2.886875\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.0206740802526474 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.09625, 2.983125, 3.2140703124999996) (3.12125, 3.01875, 3.2275)\n",
+      "transformer_held_out_days_memo_seed_2\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_2\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.921875\n",
+      "CER DAY:  2.8703125\n",
+      "CER DAY:  3.0421875\n",
+      "CER DAY:  3.23125\n",
+      "CER DAY:  2.8453125\n",
+      "Model performance:  2.9821875\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.020211552381515504 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.2084375, 3.1078125, 3.3112578124999996) (3.2625, 3.165, 3.36125)\n",
+      "transformer_held_out_days_memo_seed_3\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_3\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.5328125\n",
+      "CER DAY:  2.6203125\n",
+      "CER DAY:  2.3921875\n",
+      "CER DAY:  2.378125\n",
+      "CER DAY:  2.121875\n",
+      "Model performance:  2.4090625\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.03369760930538177 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (2.4175, 2.3240625, 2.515625) (2.665, 2.57, 2.76375)\n",
+      "transformer_held_out_days_memo_seed_3\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_3\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  3.25625\n",
+      "CER DAY:  2.8421875\n",
+      "CER DAY:  2.5578125\n",
+      "CER DAY:  2.6796875\n",
+      "CER DAY:  2.98125\n",
+      "Model performance:  2.8634375\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.019275245666503907 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.108125, 2.9931171875, 3.2209375) (3.13, 3.02625, 3.235)\n",
+      "transformer_held_out_days_memo_seed_3\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_3\n",
+      "Loading TRANSFORMER\n",
+      "RESTRICTED DAYS:  []\n",
+      "CER DAY:  2.9\n",
+      "CER DAY:  2.84375\n",
+      "CER DAY:  3.009375\n",
+      "CER DAY:  3.2078125\n",
+      "CER DAY:  2.8734375\n",
+      "Model performance:  2.966875\n",
+      "Running n-gram LM\n",
+      "N-gram decoding took 0.02034751296043396 seconds per sample\n",
+      "CER and WER after 3-gram LM:  (3.2159375, 3.111875, 3.3196875) (3.2575, 3.15625, 3.3575)\n"
      ]
     }
    ],
    "source": [
-    "output_file = 'leia'\n",
+    "output_file = 'obi'\n",
     "    \n",
     "device = \"cuda:2\"\n",
     "\n",
@@ -190,9 +309,7 @@
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "    \n",
-    "models_to_run = ['neurips_transformer_time_masked_held_out_days_2',\n",
-    "                 'neurips_transformer_time_masked_held_out_days_1', \n",
-    "                 'neurips_transformer_time_masked_held_out_days']\n",
+    "models_to_run = ['tf_no_time_mask_blue']\n",
     "\n",
     "shared_output_file = 'transformer_held_out_days_memo'\n",
     "\n",
