--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 373,
    "id": "c03723b7",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
     "import matplotlib.patches as patches\n",
     "\n",
     "data = trainDatasets[0]['sentenceDat'][10].T\n",
-    "\n",
+    "np.save('figure1_neural_data', data)\n",
     "\n",
     "plt.figure(figsize=(5, 3))\n",
     "plt.imshow(trainDatasets[0]['sentenceDat'][10].T[:128, 0:200], clim=[-1, 1], alpha=0.4, cmap='bone')\n",
